2.11.3 (18.04.2021):

* Enabled subject and keywords in filename template.
* Update to Hungarian translation (thanks to csola)


2.11.2 (18.03.2021):

* Recognise that the smfp backend returns "Device busy" if the scanner is turned
  off and display the relevant dialog.
  Closes #378 (gscan2pdf claims scanner is "busy" when not connected)
* Update to Hungarian translation (thanks to csola)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.11.1 (17.02.2021):

* Fix bug importing a DjVu or TIFF with depth > 1 and saving it as PDF with G3/4
* Remove zip and packbits PDF compression options. Rename PNG->Flate.
  Closes bug #366 (Rename PDF compression options)
* Don't write blank metadata fields. Closes bug #375
  (PDF saving with empty meta data. Don't write "NONE" to fields)
* + Galician translation (thanks to dopais)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.11.0 (17.01.2021):

* Run started callback before error callback
* + option to navigate through OCR output by position
* Fix hang trying to process page that has been deleted.
* Quit with fatal error if module versions do not match executable version.
  Closes #370 (gscan2pdf opens to white screen).
* Take undo/redo snapshot when adding or correcting OCR text
* Don't lose OCR output when running user-defined tool
* Only update list of user-defined tools on pressing apply in preferences.
* + vertically split screen view for image and OCR output.
* Correct use of dpi option in v4.0.0-beta.1 tesseract call (i.e. Bionic).
* Check that the core font cannot encode the glyphs before using TTF.
* + option to put OCR output to the right of the image, rather than behind it.
* Additionally make source "Normal" a synonym for "flatbed". Closes #371
  (Improve option for auto-select #Pages upon switching ADF/Normal)
* Fix bug estimating height of non-greyscale variable height scans.
  Closes #372 (Scans ignore page size settings using libscan-image front end).